@@ -3,6 +3,7 @@
 - Quote selected columns
 - More unobtrusive html views
 - Move () in visibility toggle links inside so they can be overrided
+- More helpers to support overriding
 - Extend datepicker to load settings from data attributes before onReady event is fired
 - Add weight to action links
 - Add placeholder in search form
@@ -24,6 +25,8 @@
 - Improve XML/JSON/YAML: return primary key, associations and virtual columns (a method must exist in model)
 - Add support for :label_method option for association columns so another method can be used instead of to_label
 - Support update_columns in plural associations
+- Support nil conditions in conditions_from_params: when column param is empty and is not a text column, nil condition will be used
+- Support autopagination, first page is loaded in first request, then all pages are loaded and displayed by ajax automatically
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
